@@ -1,4 +1,5 @@
 2015-07-22  Kirit Saelensminde  <kirit@felspar.com>
+ The performance counter now takes a variadic constructor to build the path that it will be recorded into.
  Changed the `jcursor` constructors to be properly variadic.
 
 2015-06-20  Kirit Saelensminde  <kirit@felspar.com>
